@@ -4,52 +4,58 @@ import br.edu.ifba.cassino.cliente.comunicacao.Cliente;
 import br.edu.ifba.cassino.cliente.modelo.Jogador;
 import br.edu.ifba.cassino.cliente.modelo.MesaResultadoDTO;
 import br.edu.ifba.cassino.cliente.sensoriamento.SensorDeApostas;
+import br.edu.ifba.cassino.cliente.util.Encriptador;
 import com.google.gson.Gson;
 
-import javax.crypto.Cipher;
-import java.io.*;
+import java.io.File;
+import java.io.IOException;
+import java.io.OutputStream;
 import java.net.HttpURLConnection;
 import java.net.URL;
 import java.nio.charset.StandardCharsets;
-import java.security.*;
+import java.nio.file.Files;
+import java.security.KeyFactory;
+import java.security.PublicKey;
 import java.security.spec.X509EncodedKeySpec;
-import java.util.*;
+import java.util.ArrayList;
+import java.util.Base64;
+import java.util.List;
+import java.util.Queue;
+import java.util.LinkedList;
 
 public class ClienteImpl implements Cliente, Runnable {
     private static final String URL_SERVIDOR = "http://localhost:8080/";
     private static final String URL_MESA = URL_SERVIDOR + "cassino/melhorGrupo";
 
-    private static final String CAMINHO_CHAVE_PUBLICA = "chaves/publica.chv"; // Caminho da chave pública
-    private static final String ALGORITMO_ENCRIPTACAO = "RSA";
-
-    private PublicKey chavePublica;
-    
     private final int totalJogadores;
     private final int jogadoresPorLeva;
     private final String mesaId;
     private List<Jogador> jogadores;
     private Queue<Jogador> melhoresJogadores;
     private double saldoFinalMesa;
+    private PublicKey chavePublica; // 🔹 Agora está corretamente definido
 
-    public ClienteImpl(String mesaId, int totalJogadores, int jogadoresPorLeva) throws Exception {
+    public ClienteImpl(String mesaId, int totalJogadores, int jogadoresPorLeva) {
         this.mesaId = mesaId;
         this.totalJogadores = totalJogadores;
         this.jogadoresPorLeva = jogadoresPorLeva;
         this.jogadores = new ArrayList<>();
         this.melhoresJogadores = new LinkedList<>();
         this.saldoFinalMesa = 0.0;
-        this.chavePublica = carregarChavePublica();
+        try {
+            this.chavePublica = carregarChavePublica();
+        } catch (Exception e) {
+            System.err.println("[ERRO] Falha ao carregar chave pública: " + e.getMessage());
+        }
     }
 
     private PublicKey carregarChavePublica() throws Exception {
-        File arquivo = new File(CAMINHO_CHAVE_PUBLICA);
-        FileInputStream fis = new FileInputStream(arquivo);
-        byte[] bytes = fis.readAllBytes();
-        fis.close();
+        File arquivo = new File("chave/chave_publica.key");
+        byte[] bytes = Files.readAllBytes(arquivo.toPath());
 
         X509EncodedKeySpec spec = new X509EncodedKeySpec(bytes);
-        KeyFactory keyFactory = KeyFactory.getInstance(ALGORITMO_ENCRIPTACAO);
-        return keyFactory.generatePublic(spec);
+        KeyFactory kf = KeyFactory.getInstance("RSA");
+        return kf.generatePublic(spec);
     }
 
     @Override
@@ -64,57 +70,73 @@ public class ClienteImpl implements Cliente, Runnable {
 
     @Override
     public void run() {
-        System.out.println("[MESA " + mesaId + "] Iniciando apostas...");
+        System.out.println("[" + mesaId + "] Iniciando apostas...");
+
+        if (jogadores.size() != totalJogadores) {
+            System.err.println("[ERRO] Quantidade de jogadores incorreta! Esperado: " + totalJogadores + ", Obtido: "
+                    + jogadores.size());
+            return;
+        }
 
         for (int i = 0; i < totalJogadores; i += jogadoresPorLeva) {
-            List<Jogador> levaJogadores = jogadores.subList(i, Math.min(i + jogadoresPorLeva, jogadores.size()));
+            if (i >= jogadores.size()) {
+                System.err.println("[ERRO] Tentativa de acessar subList além do tamanho da lista. Encerrando loop.");
+                break;
+            }
+
+            int fim = Math.min(i + jogadoresPorLeva, jogadores.size());
+            List<Jogador> levaJogadores = new ArrayList<>(jogadores.subList(i, fim));
+
             SensorDeApostas.gerarApostasParaJogadores(levaJogadores, 5);
+
             levaJogadores.forEach(Jogador::apostar);
             atualizarMelhoresJogadores(levaJogadores);
             enviarDadosMesa();
         }
     }
 
-    private void atualizarMelhoresJogadores(List<Jogador> leva) {
-        melhoresJogadores.clear();
-        double maiorLucro = Double.NEGATIVE_INFINITY;
-        for (Jogador jogador : leva) {
-            double lucro = jogador.getSaldo() - jogador.getSaldoInicial();
-            if (melhoresJogadores.size() < 3 || lucro > maiorLucro) {
+    private void atualizarMelhoresJogadores(List<Jogador> levaJogadores) {
+        for (Jogador jogador : levaJogadores) {
+            if (melhoresJogadores.size() < jogadoresPorLeva) {
                 melhoresJogadores.add(jogador);
-                maiorLucro = lucro;
+            } else {
+                Jogador piorJogador = melhoresJogadores.peek();
+                if (jogador.getSaldo() > piorJogador.getSaldo()) {
+                    melhoresJogadores.poll();
+                    melhoresJogadores.add(jogador);
+                }
             }
         }
-
-        saldoFinalMesa = 0.0;
-        for (Jogador jogador : leva) {
-            saldoFinalMesa += jogador.getSaldo();
-        }
     }
 
-    private byte[] encriptar(String json) throws Exception {
-        Cipher cipher = Cipher.getInstance(ALGORITMO_ENCRIPTACAO);
-        cipher.init(Cipher.ENCRYPT_MODE, chavePublica);
-        return cipher.doFinal(json.getBytes(StandardCharsets.UTF_8));
-    }
-
-    @Override
     public void enviarDadosMesa() {
         try {
             if (melhoresJogadores.isEmpty()) {
                 System.err.println("[MESA " + mesaId + "] Nenhum jogador qualificado para envio.");
                 return;
             }
-
-            MesaResultadoDTO resultado = new MesaResultadoDTO(mesaId, saldoFinalMesa, new ArrayList<>(melhoresJogadores));
+    
+            // 🔹 Criar DTO para envio
+            MesaResultadoDTO resultado = new MesaResultadoDTO(mesaId, saldoFinalMesa,
+                    new ArrayList<>(melhoresJogadores));
             String json = new Gson().toJson(resultado);
-            byte[] dadosEncriptados = encriptar(json);
-            String dadosBase64 = Base64.getEncoder().encodeToString(dadosEncriptados);
-
-            URL url = new URL(URL_MESA + "?dados=" + dadosBase64);
+    
+            // 🔑 Encriptar os dados usando AES + RSA
+            String dadosCriptografados = Encriptador.encriptar(chavePublica, json.getBytes(StandardCharsets.UTF_8));
+    
+            // 🔹 Enviar os dados criptografados ao servidor
+            URL url = new URL(URL_MESA);
             HttpURLConnection conexao = (HttpURLConnection) url.openConnection();
-            conexao.setRequestMethod("GET");
-
+    
+            conexao.setDoOutput(true);
+            conexao.setRequestMethod("POST");
+            conexao.setRequestProperty("Content-Type", "application/json");
+    
+            try (OutputStream os = conexao.getOutputStream()) {
+                byte[] input = dadosCriptografados.getBytes(StandardCharsets.UTF_8);
+                os.write(input, 0, input.length);
+            }
+    
             int responseCode = conexao.getResponseCode();
             System.out.println("[MESA " + mesaId + "] Resposta do servidor: " + responseCode);
             conexao.disconnect();
@@ -123,4 +145,5 @@ public class ClienteImpl implements Cliente, Runnable {
             e.printStackTrace();
         }
     }
+    
 }
